--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+<html>
+<body>
 
+<h1>Welcome to Sailor's Home Page</h1>
+<p><img src="sailor.jpg" alt="sailor.com" width="104" height="142"></p>
+
+</body>
+</html>
