--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Welcome to Sailor's Home Page</h1>
-<p><img src="sailor.jpg" alt="sailor.com" width="104" height="142"></p>
+<p><img src="sailor.JPG" alt="sailor.com" width="104" height="142"></p>
 
 </body>
 </html>
