--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <body>
 
-<h1>Welcome to Sailor's Home Page</h1>
-<p><img src="sailor.JPG" alt="sailor.com" width="104" height="142"></p>
+<h1>Welcome to Sailor's Home Page</h1>\
+<h1 style="background-color:Plum;">Welcome to Sailor's Home Page</h1>
+<p><img src="sailor.JPG" alt="sailor.com" width="500" height="500"></p>
 
 </body>
 </html>
