--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<body style="background-color:LightCyan;">
 
 <h1 style="background-color:Plum;">Welcome to Sailor's Home Page</h1>
 <p><img src="sailor.JPG" alt="sailor.com" width="500" height="500"></p>
