--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 <body style="background-color:LightCyan;">
-
+<center>
 <h1 style="background-color:Plum;">Welcome to Sailor's Home Page</h1>
 <p><img src="sailor.JPG" alt="sailor.com" width="500" height="500"></p>
-
+<center>
 </body>
 </html>
