--- a/about.html
+++ b/about.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<h1>Welcome to Sailor's Home Page</h1>
-<p><img src="sailor.jpg" alt="sailor.com" width="104" height="142"></p>
-
+<center>
+  <h1>About Me</h1>
+  <p>I'm a junior at RBHS and like to swim</p>
+  <p><img src="swim.jpeg" alt="swim.com" width="500" height="500"></p>
+<center>
 </body>
 </html>
