--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h1 style="background-color:Plum;">Welcome to Sailor's Home Page</h1>
 <a href="index.html">Home</a>
 <a href="portfolio.html">Portfolio</a>
-<a href="aboutme.html">About Me</a>
+<a href="about.html">About Me</a>
 <p><img src="sailor.JPG" alt="sailor.com" width="500" height="500"></p>
 <center>
 </body>
