--- a/about.html
+++ b/about.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <body style="background-color:LightCyan;">
 <center>
-  <h1>About Me</h1>
+  <h1 style="background-color:Plum;">About Me</h1>
   <p>I'm a junior at RBHS and like to swim</p>
   <p><img src="swim.jpeg" alt="swim.com" width="500" height="500"></p>
 <center>
