--- a/about.html
+++ b/about.html
@@ -5,7 +5,9 @@
 <center>
   <h1 style="background-color:Plum;">About Me</h1>
   <p>I'm a junior at RBHS and like to swim</p>
-  <p><img src="swim.jpeg" alt="swim.com" width="500" height="500"></p>
+  <p><img src="swim.jpeg" alt="swim.com" width="400" height="400"></p>
+  <p>My favorite food is sushi</p>
+  <p><img src="sushi.jpg" alt="sushi.com" width="400" height="400"></p>
 <center>
 </body>
 </html>
