--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
   <p><img src="swim.jpeg" alt="swim.com" width="400" height="400"></p>
   <p>My favorite food is sushi</p>
   <p><img src="sushi.jpg" alt="sushi.com" width="400" height="400"></p>
+  <p>I love Psyduck!</p>
+  <p><img src="psyduck.gif" alt="psyduck.com" width="400" height="400"></p>
 <center>
 </body>
 </html>
