--- a/about.html
+++ b/about.html
@@ -4,6 +4,9 @@
 <body style="background-color:LightCyan;">
 <center>
   <h1 style="background-color:Plum;">About Me</h1>
+  <a href="index.html">Home</a>
+  <a href="portfolio.html">Portfolio</a>
+  <a href="about.html">About Me</a>
   <p>I'm a junior at RBHS and like to swim</p>
   <p><img src="swim.jpeg" alt="swim.com" width="400" height="400"></p>
   <p>My favorite food is sushi</p>
