--- a/portfolio.html
+++ b/portfolio.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
+<body>
+<body style="background-color:LightCyan;">
+<center>
+<h1 style="background-color:Plum;">Sailor's Portfolio Page</h1>
+<p>Second Day Scratch Project</p>
 
+
+<p>Using App Inventor to make app game Duck Hunter</p>
+
+<p>Interactive fiction Rags to Riches</p>
+
+<p>Black Jack game written in Python</p>
+
+<p>Modified bits in pictures</p>
+<center>
