--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <body>
 <body style="background-color:LightCyan;">
 <center>
-<h1 style="background-color:Plum;">Sailor's Portfolio Page</h1>
+<h1 style="background-color:Plum;">Portfolio</h1>
 <p>Second Day Scratch Project</p>
 
 
