--- a/portfolio.html
+++ b/portfolio.html
@@ -4,14 +4,13 @@
 <body style="background-color:LightCyan;">
 <center>
 <h1 style="background-color:Plum;">Portfolio</h1>
-<p>Second Day Scratch Project</p>
+<p style="font-size:50px">Second Day Scratch Project</p>
 
+<p style="font-size:50px">Using App Inventor to make app game Duck Hunter</p>
 
-<p>Using App Inventor to make app game Duck Hunter</p>
+<p style="font-size:50px">Interactive fiction Rags to Riches</p>
 
-<p>Interactive fiction Rags to Riches</p>
+<p style="font-size:50px">Black Jack game written in Python</p>
 
-<p>Black Jack game written in Python</p>
-
-<p>Modified bits in pictures</p>
+<p style="font-size:50px">Modified bits in pictures</p>
 <center>
