--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <a href="portfolio.html">Portfolio</a>
 <a href="about.html">About Me</a>
 <p><img src="sailor.JPG" alt="sailor.com" width="500" height="500"></p>
+<audio controls>
+  <source src="dynamite.mp3" type="dynamite/mpeg">
 <center>
 </body>
 </html>
