--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,9 @@
 <body style="background-color:LightCyan;">
 <center>
 <h1 style="background-color:Plum;">Portfolio</h1>
+<a href="index.html">Home</a>
+<a href="portfolio.html">Portfolio</a>
+<a href="about.html">About Me</a>
 <p style="font-size:50px">Second Day Scratch Project</p>
 
 <p style="font-size:50px">Using App Inventor to make app game Duck Hunter</p>
