--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p><img src="sailor.JPG" alt="sailor.com" width="500" height="500"></p>
 <audio controls>
   <source src="dynamite.mp3" type="dynamite/mpeg">
-</audio>
+<audio controls autoplay loop>
 <center>
 </body>
 </html>
