--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <a href="about.html">About Me</a>
 <p><img src="sailor.JPG" alt="sailor.com" width="500" height="500"></p>
 <audio controls>
-  <source src="dynamite.mp3" type="dynamite/mpeg">
+  <source src="dynamite.mp3" type="audio/mpeg">
 </audio>
 <center>
 </body>
