--- a/portfolio.html
+++ b/portfolio.html
@@ -7,13 +7,10 @@
 <a href="index.html">Home</a>
 <a href="portfolio.html">Portfolio</a>
 <a href="about.html">About Me</a>
-<p style="font-size:50px">Second Day Scratch Project</p>
+<p style="font-size:50px">1.1.9 Project: Pablo the Turtle's Adventure</p>
+<p><img src="1.1.9.JPG" alt="1.1.9.com" width="400" height="400"></p>
+<p>This is our project. A turtle runs and hits a flower, spinning and changing colors. He then dives into the lake to swim around with his fish friends, and various oobjects are mvoing as well.</p>
 
-<p style="font-size:50px">Using App Inventor to make app game Duck Hunter</p>
 
-<p style="font-size:50px">Interactive fiction Rags to Riches</p>
 
-<p style="font-size:50px">Black Jack game written in Python</p>
-
-<p style="font-size:50px">Modified bits in pictures</p>
 <center>
