--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 <a href="about.html">About Me</a>
 <p style="font-size:50px">1.1.9 Project: Pablo the Turtle's Adventure</p>
 <p><img src="1.1.9.JPG" alt="1.1.9.com" width="400" height="400"></p>
-<p>This is our project. A turtle runs and hits a flower, spinning and changing colors. He then dives into the lake to swim around with his fish friends, and various oobjects are mvoing as well.</p>
+<p>This is our project. A turtle runs and hits a flower, spinning and changing colors. He then dives into the lake to swim around with his fish friends, and various objects are moving as well.</p>
 
 
 
