--- a/portfolio.html
+++ b/portfolio.html
@@ -15,3 +15,8 @@
 <p><img src="1.2.5.JPG" alt="1.2.5.com" width="400" height="400"></p>
 <p>This is our game! At the beginning of the game, it flashes white to briefly display the board.The screen then "blacks out", and it begins the multiplayer Tic Tac Toe in the dark. You take turns with your friend next to you in playing, and whoever can sucessfly get a Tic Tac Toe on the blacked out gameboard is the winner. Once a tile is clicked, it turns white revealing the location you chose to place either your X or O marker. We were planning to advance the game by making a round system and a scoreboard, but the code function did not properly work during our presentation, so it is a one round game :)</p>
 <center>
+
+<p style="font-size:50px">1.3.1 Project: Super Mario Run</p>
+<p><img src="mario.JPG" alt="mario.com" width="400" height="400"></p>
+<p>Our 1.3.1 project is called Super Mario Run. You play as Mario, trying to advoid the Bowsers by jumping over them. The Bowsers are set to random speeds, and running into one causes the game to end. There is a score count in game that keeps track of how many Bowsers you have jumped over. When the game ends, it displays GAME OVER and your final score <p>
+<center>
