--- a/portfolio.html
+++ b/portfolio.html
@@ -18,5 +18,5 @@
 
 <p style="font-size:50px">1.3.1 Project: Super Mario Run</p>
 <p><img src="mario.JPG" alt="mario.com" width="400" height="400"></p>
-<p>Our 1.3.1 project is called Super Mario Run. You play as Mario, trying to advoid the Bowsers by jumping over them. The Bowsers are set to random speeds, and running into one causes the game to end. There is a score count in game that keeps track of how many Bowsers you have jumped over. When the game ends, it displays GAME OVER and your final score <p>
+<p>Our 1.3.1 project is called Super Mario Run. You play as Mario, trying to advoid the Bowsers by jumping over them. The Bowsers are set to random speeds, and running into one causes the game to end. There is a score count in game that keeps track of how many Bowsers you have jumped over. When the game ends, it displays GAME OVER and your final score.<p>
 <center>
