--- a/portfolio.html
+++ b/portfolio.html
@@ -20,3 +20,9 @@
 <p><img src="mario.JPG" alt="mario.com" width="400" height="400"></p>
 <p>Our 1.3.1 project is called Super Mario Run. You play as Mario, trying to advoid the Bowsers by jumping over them. The Bowsers are set to random speeds, and running into one causes the game to end. There is a score count in game that keeps track of how many Bowsers you have jumped over. When the game ends, it displays GAME OVER and your final score.<p>
 <center>
+
+<p style="font-size:50px">1.3.1 Project: The Search for Gandalf (Scratch)</p>
+<p><img src="scratch.JPG" alt="scratch.com" width="400" height="400"></p>
+<p>https://scratch.mit.edu/projects/462632602/<p>
+<p>Welcome to the Search for Gandalf! Our first Scratch game is a dialogue-parkour style game. You go through the dialogue and the main goal is to play as Mr.Dunlea and ge Gandalf back! You have to jump through a level and once you reach the end, Gandalf is there cchirping and gives you a new shirt. However, watch out for the lava and fire balls because they will reset your progress. We wanted to add on another level, but it was difficult to make the transition. The game is over when you reach Gandalf.<p>
+<center>
