--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <body style="background-color:LightCyan;">
 <center>
-<h1 style="background-color:Plum;">Welcome to Sailor's Home Page</h1>
+<h1 style="background-color:Plum;">Sailor Alfonzo</h1>
 <a href="index.html">Home</a>
 <a href="portfolio.html">Portfolio</a>
 <a href="about.html">About Me</a>
